# signage

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  PLUGIN_CONVERSION_SUMMARY.md  README.md  README_NEW.md  REFACTORING_COMPLETE.md  ROADMAP.md  SECURITY.md  TESLA_SETUP.md  TESLA_SETUP_COMPARISON.md  TESLA_SETUP_OPNSENSE.md  TESLA_SETUP_TAILSCALE.md  docker-compose.yml  generate_signage.py  oauth_tesla.py  pyproject.toml  register_tesla.py  requirements-dev.txt  requirements.txt  setup-tailscale.sh  sources.yaml  tesla-caddy-setup.sh  tesla-nginx-setup.sh  test_new_plugins.py  test_plugin_system.py  upload_to_frame.py
.github/: copilot-instructions.md  drawio.instructions.md  python-standards.instructions.md
.github/agents/: BeastMode.agent.md
.github/workflows/: ci.yml  release.yml
backgrounds/: CREDITS.md
docs/: PLUGIN_GUIDE.md  PLUGIN_IMPLEMENTATION_PLAN.md
docs/adr/: 0001-plugin-system-architecture.md  README.md
examples/: sources.yaml
scripts/: setup.sh  setup_cron.sh  validate-docker.sh
src/: __init__.py  config.py  config_validator.py  scheduler.py
src/backgrounds/: __init__.py  base_provider.py  gradient_provider.py  local_provider.py  pexels_provider.py  unsplash_provider.py
src/clients/: ambient_weather.py  base.py  ferry.py  homeassistant.py  marine_traffic.py  speedtest.py  stock.py  system_health.py  tesla_fleet.py  weather.py  whale_tracker.py
src/clients/sports/: __init__.py  base_sports.py  cricket.py  football.py  nfl.py  rugby.py
src/models/: __init__.py  signage_data.py
src/plugins/: __init__.py  base_source.py  executor.py  migrator.py  registry.py
src/plugins/config/: __init__.py  loader.py  schemas.py
src/plugins/sources/: __init__.py  ambient_weather_source.py  ferry_map_source.py  ferry_source.py  football_source.py  nfl_source.py  speedtest_source.py  stock_source.py  system_health_source.py  tesla_source.py  weather_source.py
src/renderers/: __init__.py  ferry_map_renderer.py  image_renderer.py  map_renderer.py  text_layouts.py  weather_card_renderer.py
src/templates/: README.md  base.html  centered_layout.html  grid_layout.html  left_aligned_layout.html  modern_ambient_layout.html  modern_ferry_layout.html  modern_football_layout.html  modern_powerwall_layout.html  modern_rugby_layout.html  modern_sensors_layout.html  modern_speedtest_layout.html  modern_stock_layout.html  modern_system_layout.html  modern_tesla_layout.html  modern_weather_layout.html  split_layout.html  weather_cards.html  weather_layout.html
src/utils/: cache_manager.py  file_manager.py  html_renderer.py  image_utils.py  logging_utils.py  output_manager.py  system_stats.py  template_renderer.py
tests/: __init__.py  test_client_ferry.py  test_client_speedtest.py  test_client_sports_football.py  test_client_stock.py  test_client_tesla.py  test_client_weather.py  test_clients.py  test_config.py  test_config_validator.py  test_file_manager.py  test_models.py  test_plugins.py  test_renderers.py  test_system_stats.py  test_tesla_caching.py  test_tesla_source.py
utils/: tv_art_poll.py  tv_delete_old_user_uploads.py  tv_list_my_uploads.py
